Missing Tooltip for Excluded Paths field of Auto Run Python Scripts in User Preferences -> File #36043

Closed
opened 2013-07-07 10:26:49 +02:00 by Eric Pellegrin · 5 comments

%%%--- Operating System, Graphics card ---

Kubuntu 12.04, Radeon HD 6290

- Blender version with error, and version that worked ---

Blender 2.68 Release Candidate, feature not available in older versions

- Short description of error ---

In the User Preferences dialog under the File tab, the Tooltip for the Excluded Paths field, which is enabled when Auto Run Python Scripts is checked, displays "(undocumented operator)" rather than a description of the purpose of the field.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Under the File menu select User Preferences... to open the preferences window, then click the File tab. With Auto Run Python Scripts checked (which it is by default) hover the mouse over the "+" sign to the right of the Excluded Paths field. The Tooltip will display (assuming you have Tootips enabled under the Interface tab of the User Preferences window).
%%%

%%%--- Operating System, Graphics card --- Kubuntu 12.04, Radeon HD 6290 - Blender version with error, and version that worked --- Blender 2.68 Release Candidate, feature not available in older versions - Short description of error --- In the User Preferences dialog under the File tab, the Tooltip for the Excluded Paths field, which is enabled when Auto Run Python Scripts is checked, displays "(undocumented operator)" rather than a description of the purpose of the field. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Under the File menu select User Preferences... to open the preferences window, then click the File tab. With Auto Run Python Scripts checked (which it is by default) hover the mouse over the "+" sign to the right of the Excluded Paths field. The Tooltip will display (assuming you have Tootips enabled under the Interface tab of the User Preferences window). %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Assigning to Campbell.

Campbell, I tried to fix this, but the logic is confusing.
The UI says "Excluded files", which indicates that paths added here have auto run disabled, but the operators says "Add Autoexec Path", which indicates it adds paths which then have auto run enabled.

It would be good to make this more logical as well ;)

%%%

%%%Assigning to Campbell. Campbell, I tried to fix this, but the logic is confusing. The UI says "Excluded files", which indicates that paths added here have auto run *disabled*, but the operators says "Add Autoexec Path", which indicates it adds paths which then have auto run *enabled*. It would be good to make this more logical as well ;) %%%
Author

%%%I find the logic confusing as well. It seems like the user would want to specify paths where safe scripts are placed, not try to exclude every possible path where an unsafe script might be placed.%%%

%%%I find the logic confusing as well. It seems like the user would want to specify paths where safe scripts are placed, not try to exclude every possible path where an unsafe script might be placed.%%%

%%%fixed r58069.

ability to flip logic for opt in/out could be nice, Ton and I thaught not to add this initially though. it may be possible in the future.%%%

%%%fixed r58069. ability to flip logic for opt in/out could be nice, Ton and I thaught not to add this initially though. it may be possible in the future.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36043
No description provided.