fix [#36043] Missing Tooltip for Excluded Paths field of Auto Run Python Scripts in User Preferences -> File

also select more/less were flipped for mesh menu compared to everywhere else.